# vercel_environment_updater

./: Cargo.toml  Dockerfile  README.md  action.yaml
.github/workflows/: docker.yaml  test.yaml
src/: environment_variable.rs  lib.rs  main.rs  target_environment.rs  variable_type.rs  vercel_configuration.rs  vercel_environment_configuration.rs  vercel_environment_variable.rs
